--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -218,6 +218,7 @@ be reposted without the explicit permission of the copyright holder.
 <td><b><a href="./2021/ASIACCS.pdf">Malware makeover: Breaking ML-based static analysis by modifying executable bytes</a></b>
 <br>K. Lucas, M. Sharif, L. Bauer, M. K. Reiter, and S. Shintre.
 <font size="-1"><a href="https://doi.org/10.1145/3433210.3453086">doi:10.1145/3433210.3453086</a></font>
+<br>Additional information: &nbsp; <a href="https://github.com/pwwl/enhanced-binary-diversification">implementation</a>
 </td></tr>
 
 <tr valign=top><td>2017</td>
@@ -263,6 +264,7 @@ Security (CCS)</a></i></b>
 <tr valign=top><td></td>
 <td><b><a href="./2016/CCS2.pdf">Accessorize to a crime: Real and stealthy attacks on state-of-the-art face recognition</a></b>
 <br>M. Sharif, S. Bhagavatula, L. Bauer, and M. K. Reiter.  Pages 1528&#8211;1540.  <font size="-1"><a href="http://dx.doi.org/10.1145/2976749.2978392">doi:10.1145/2976749.2978392</a></font>
+<br>Additional information: &nbsp; <a href="https://github.com/mahmoods01/accessorize-to-a-crime">implementation</a>
 </td></tr>
 
 <tr valign=top><td>2015</td>
@@ -313,8 +315,7 @@ expiration: An algorithmic framework and empirical analysis</a></b>
 <td><b><a href="./2009/CCS1.pdf">False data injection attacks against state estimation in electric power grids</a></b>
 <br>Y. Liu, P. Ning and M. K. Reiter.  Pages 21&#8211;32.
 <font size="-1"><a href="http://doi.acm.org/10.1145/1653662.1653666">doi:10.1145/1653662.1653666</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2011/TISSEC2">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2011/TISSEC2">journal version</a>
 </td></tr>
 
 <tr valign=top><td></td>
@@ -336,8 +337,7 @@ detection and signature generation</a></b>
 <br>X. Wang, Z. Li, J. Xu, M. K. Reiter, C. Kil and J. Y. Choi.
 Pages 37&#8211;46.  <font size="-1"><a
 href="http://doi.acm.org/10.1145/1180405.1180412">doi:10.1145/1180405.1180412</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2008/TISSEC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2008/TISSEC">journal version</a>
 </td></tr>
 
 <tr valign=top><td>2004</td>
@@ -351,8 +351,7 @@ attacks using congestion puzzles</a></b>
 <br>X. Wang and M. K. Reiter.  Pages 257&#8211;267.  <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/1030083.1030118">doi:10.1145/1030083.1030118</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2007/IJIS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2007/IJIS">journal version</a>
 </td></tr>
 
 <tr valign=top><td></td>
@@ -375,8 +374,7 @@ cryptographic servers for capture-resilient devices</a></b>
 <br>P. MacKenzie and M. K. Reiter.  Pages 10&#8211;19.  <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/501983.501986">doi:10.1145/501983.501986</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2003/DC2">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2003/DC2">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1999</td>
@@ -385,8 +383,7 @@ keystroke dynamics</a></b>
 <br>F. Monrose, M. K. Reiter and S. Wetzel.  Pages 73&#8211;82.
 <font size="-1"><a
 href="http://doi.acm.org/10.1145/319709.319720">doi:10.1145/319709.319720</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2002/IJIS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2002/IJIS">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1997</td>
@@ -402,8 +399,7 @@ href="http://doi.acm.org/10.1145/266420.266424">doi:10.1145/266420.266424</a> &n
 <br>M. K. Reiter and S. G. Stubblebine.  Pages 57&#8211;66. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/266420.266435">doi:10.1145/266420.266435</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#1998/ToC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1998/ToC">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1996</td>
@@ -411,8 +407,7 @@ version</a>.
 <br>M. K. Reiter, M. K. Franklin, J. B. Lacy and R. N. Wright.  Pages
 38&#8211;47.  <font size="-1"><a
 href="http://dx.doi.org/10.1145/238168.238184">doi:10.1145/238168.238184</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#1996/JoCS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1996/JoCS">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1994</td>
@@ -549,8 +544,7 @@ access</a></b>
 misconfigurations in access-control systems</a></b>
 <br>L. Bauer, S. Garriss and M. K. Reiter.  Pages 185&#8211;194.
 <font size="-1"><a href="http://doi.acm.org/10.1145/1377836.1377866">doi:10.1145/1377836.1377866</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2011/TISSEC1">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2011/TISSEC1">journal version</a>
 </td></tr>
 </table></p>
 
@@ -584,6 +578,7 @@ Computing (PODC)</a></i></b>
 <tr valign=top><td>2019</td>
 <td><b><a href="./2019/PODC.pdf">HotStuff: BFT consensus with linearity and responsiveness</a></b>
 <br>M. Yin, D. Malkhi, M. K. Reiter, G. G. Gueta, and I. Abraham.  <font size="-1"><a href="https://doi.org/10.1145/3293611.3331591">doi:10.1145/3293611.3331591</a></font>      
+<br>Additional information: &nbsp; <a href="https://github.com/hot-stuff/libhotstuff">implementation</a> &nbsp; <a href="https://github.com/diem/diem">Diem implementation</a>
 </td></tr>
 
 <tr valign=top><td>2007</td>
@@ -622,8 +617,7 @@ href="http://doi.acm.org/10.1145/383962.384047">doi:10.1145/383962.384047</a> &n
 <br>R. De Prisco, D. Malkhi and M. K. Reiter.  Pages
 257&#8211;265. <font size="-1"><a
 href="http://doi.acm.org/10.1145/301308.301368">doi:10.1145/301308.301368</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2001/TPDS2">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2001/TPDS2">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1997</td>
@@ -632,8 +626,7 @@ of Byzantine quorum systems</a></b>
 <br>D. Malkhi, M. Reiter and A. Wool.  Pages 249&#8211;257. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/259380.259450">doi:10.1145/259380.259450</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2000/JoC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2000/JoC">journal version</a>
 </td></tr>
 
 <tr valign=top><td></td>
@@ -641,8 +634,7 @@ version</a>.
 <br>D. Malkhi, M. Reiter and R. Wright. Pages 267&#8211;273. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/259380.259458">doi:10.1145/259380.259458</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2001/IandC">the journal
-version</a>.
+<br>Addtional information: &nbsp; <a href="#2001/IandC">journal version</a>
 </td></tr>
 </table></p>
 
@@ -654,8 +646,7 @@ version</a>.
 <td><b><a href="./1997/STOC.pdf">Byzantine quorum systems</a></b>
 <br>D. Malkhi and M. Reiter.  Pages 569&#8211;578.  <font size="-1"><a
 href="http://doi.acm.org/10.1145/258533.258650">doi:10.1145/258533.258650</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#1998/DC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1998/DC">journal version</a>
 </td></tr>
 </table></p>
 
@@ -757,8 +748,8 @@ href="http://doi.acm.org/10.1145/177492.177745">doi:10.1145/177492.177745</a> &n
 <tr valign=top><td>2019</td>
 <td><b><a href="./2019/TOPS.pdf">A general framework for adversarial examples with objectives</a></b>
 <br>M. Sharif, S. Bhagavatula, L. Bauer, and M. K. Reiter.
-22(3), June 2019. <font size="-1"><a
-href="https://doi.org/10.1145/3317611">doi:10.1145/3317611</a></font>
+22(3), June 2019. <font size="-1"><a href="https://doi.org/10.1145/3317611">doi:10.1145/3317611</a></font>
+<br>Additional information: &nbsp; <a href="https://github.com/mahmoods01/agns">implementation</a>
 </td></tr>
 </table></p>
 
@@ -936,8 +927,7 @@ pages 207&#8211;227.  <font size="-1"><a href="http://dx.doi.org/10.1007/978-3-5
 signatures</a></b>
 <br>P. MacKenzie and M. K. Reiter.  Lecture Notes in Computer Science
 2139, pages 137&#8211;154. <font size="-1">&copy;Springer</a></font>
-<br>Note: This paper is superceded by <a href="#2004/IJIS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2004/IJIS">journal version</a>
 </td></tr>
 </table></p>
 
@@ -1086,8 +1076,7 @@ href="http://dx.doi.org/10.1109/CSFW.1997.596799">doi:10.1109/CSFW.1997.596799</
 multicast protocol</a></b>
 <br>D. Malki and M. Reiter.  Pages 9&#8211;17. <font size="-1"><a
 href="http://dx.doi.org/10.1109/CSFW.1996.503686">doi:10.1109/CSFW.1996.503686</a> &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1997/JoCS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1997/JoCS">journal version</a>
 </td></tr>
 </table></p>
 
@@ -1252,16 +1241,14 @@ environment</a></b>
 <br>D. Malkhi, Y. Mansour and M. K. Reiter.  Pages 134&#8211;143.
 <font size="-1"><a
 href="http://dx.doi.org/10.1109/RELDIS.1999.805090">doi:10.1109/RELDIS.1999.805090</a> &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2003/TCS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2003/TCS">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1998</td>
 <td><b><a href="./1998/SRDS-2.pdf">Survivable consensus objects</a></b>
 <br>D. Malkhi and M. Reiter.  Pages 271&#8211;279.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/RELDIS.1998.740509">doi:10.1109/RELDIS.1998.740509</a> &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2000/TKDE">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2000/TKDE">journal version</a>
 </td></tr>
 
 <tr valign=top><td></td>
@@ -1326,7 +1313,7 @@ phones for human-verifiable authentication</a></b>
 110&#8211;124. <font size="-1"><a
 href="http://dx.doi.org/10.1109/SP.2005.19">doi:10.1109/SP.2005.19</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2009/IJSN">the journal version</a>.
+<br>Additional information: &nbsp; <a href="#2009/IJSN">journal version</a>
 </td></tr>
 
 <tr valign=top><td></td>
@@ -1352,8 +1339,7 @@ with puzzle auctions</a></b>
 <br>X. Wang and M. K. Reiter.  Pages 78&#8211;92.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/SECPRI.2003.1199329">doi:10.1109/SECPRI.2003.1199329</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2007/IJIS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2007/IJIS">journal version</a>
 </td></tr>
 
 <tr valign=top><td>2001</td>
@@ -1362,8 +1348,7 @@ devices resilient to capture</a></a></b>
 <br>P. MacKenzie and M. K. Reiter.  Pages 12&#8211;25.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/SECPRI.2001.924284">doi:10.1109/SECPRI.2001.924284</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2003/IJIS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2003/IJIS">journal version</a>
 </td></tr>
 
 <tr valign=top><td></td>
@@ -1382,8 +1367,7 @@ remote playground</a></b>
 <font size="-1"> <a
 href="http://dx.doi.org/10.1109/SECPRI.1998.674822">doi:10.1109/SECPRI.1998.674822</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2000/TSE">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2000/TSE">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1997</td>
@@ -1393,8 +1377,7 @@ authentication</a></b>
 <font size="-1"><a
 href="http://dx.doi.org/10.1109/SECPRI.1997.601308">doi:10.1109/SECPRI.1997.601308</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1999/TISSEC">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#1999/TISSEC">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1995</td>
@@ -1403,8 +1386,7 @@ auction service</a></b>
 <br>M. K. Franklin and M. K. Reiter.  Pages 2&#8211;14.  <font size="-1"> <a
 href="http://dx.doi.org/10.1109/SECPRI.1995.398918">doi:10.1109/SECPRI.1995.398918</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1996/TSE-2">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#1996/TSE-2">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1994</td>
@@ -1413,8 +1395,7 @@ journal version</a>.
 size="-1"><a
 href="http://dx.doi.org/10.1109/RISP.1994.296582">doi:10.1109/RISP.1994.296582</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1996/TSE-1">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#1996/TSE-1">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1993</td>
@@ -1424,8 +1405,7 @@ of causal relationships in distributed systems</a></b>
 size="-1"> <a
 href="http://dx.doi.org/10.1109/RISP.1993.287645">doi:10.1109/RISP.1993.287645</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1995/CJ">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1995/CJ">journal version</a>
 </td></tr>
 
 <tr valign=top><td>1992</td>
@@ -1544,6 +1524,7 @@ href="http://dx.doi.org/10.1109/32.502223">doi:10.1109/32.502223</a> &nbsp; &cop
 <tr valign=top><td>2019</td>
 <td><b><a href="./2019/DSN.pdf">SBFT: A scalable and decentralized trust infrastructure</a></b>
 <br>G. G. Gueta, I. Abraham, S. Grossman, D. Malkhi, B. Pinkas, M. K. Reiter, D.-A. Seredinschi, O. Tamir, and A. Tomescu. <font size="-1"><a href="http://dx.doi.org/10.1109/DSN.2019.00063">doi:10.1109/DSN.2019.00063</a> &nbsp; &copy;IEEE</font>
+<br>Additional information: &nbsp; <a href="https://github.com/vmware/concord-bft">implementation</a>
 </td></tr>
 
 <tr valign=top><td>2013</td>
@@ -1551,8 +1532,7 @@ href="http://dx.doi.org/10.1109/32.502223">doi:10.1109/32.502223</a> &nbsp; &cop
 channels in clouds using StopWatch</a></b>
 <br>P. Li, D. Gao, and M. K. Reiter.  
 <font size="-1"><a href="http://dx.doi.org/10.1109/DSN.2013.6575299">doi:10.1109/DSN.2013.6575299</a> &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2014/TISSEC">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2014/TISSEC">journal version</a>
 </td></tr>
 
 <tr valign=top><td>2011</td>
@@ -1616,8 +1596,7 @@ href="http://dx.doi.org/10.1109/ICDSN.2000.857551">doi:10.1109/ICDSN.2000.857551
 <td><b><a href="./2010/SEC.pdf">Understanding domain registration abuses</a></b>
 <br>S. E. Coull, A. M. White, T.-F. Yen, F. Monrose and M. K. Reiter.  
 Pages 68-79. <font size="-1"><a href="http://dx.doi.org/10.1007/978-3-642-15257-3_7">doi:10.1007/978-3-642-15257-3_7</a> &nbsp; &copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2012/CandS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2012/CandS">journal version</a>
 </td></tr>
 </table>
 
@@ -1632,8 +1611,7 @@ systems</a></b>
 <br>L. Alvisi, D. Malkhi, L. Pierce and M. K. Reiter.
 Pages 357&#8211;371.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/DCFTS.1999.814307">doi:10.1109/DCFTS.1999.814307</a> &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2001/TPDS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2001/TPDS">journal version</a>
 </td></tr>
 </table></p>
 
@@ -1859,6 +1837,7 @@ in Computer Science 5905, pages 132&#8211;147.
 <tr valign=top><td>2022</td>
 <td><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
 <br>W. Lin, K. Lucas, L. Bauer, M. K. Reiter, and M. Sharif
+<br>Additional information: &nbsp; <a href="https://github.com/linweiran/CGD">implementation</a>
 </td></tr>
 
 <tr valign=top><td>2020</td>
@@ -1987,8 +1966,7 @@ href="http://dx.doi.org/10.1007/11864219_18">doi:10.1007/11864219_18</a> &nbsp; 
 processes</a></b>
 <br>D. Malkhi, M. Merritt, M. K. Reiter and G. Taubenfeld.  Lecture
 Notes in Computer Science 1914, pages 345&#8211;359. <font size="-1">&copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2003/DC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2003/DC">journal version</a>
 </td></tr>
 </table>
 
@@ -2031,8 +2009,7 @@ Lecture Notes in Computer Science 4637, pages 276&#8211;295.
 <br>D. Gao, M. K. Reiter and D. Song.
 Lecture Notes in Computer Science 4219, pages 19&#8211;40. <font size="-1"><a
 href="http://dx.doi.org/10.1007/11856214_2">doi:10.1007/11856214_2</a> &nbsp; &copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2009/TDSC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2009/TDSC">journal version</a>
 </td></tr>
 
 <tr valign=top><td>2005</td>
@@ -2117,8 +2094,7 @@ malware-resistant input mechanism</a></b>
 <td><b><a href="./2010/NDSS.pdf">Server-side verification of client behavior in online games</a></b>
 <br>D. Bethea, R. A. Cochran and M. K. Reiter.  Pages 21&#8211;36.
 <font size="-1">&copy;Internet Society</font>
-<br>Note: This paper is superceded by <a href="#2011/TISSEC3">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2011/TISSEC3">journal version</a>
 </td></tr>
 
 <tr valign=top><td>2009</td>
@@ -2359,6 +2335,7 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td>2016</td>
 <td><b><a href="./2016/USENIX.pdf">Stealing machine learning models via prediction APIs</a></b>
 <br>F. Tram&egrave;r, F. Zhang, A. Juels, M. K. Reiter, and T. Ristenpart.  Pages 601&#8211;618.
+<br>Additional information: &nbsp; <a href="https://youtu.be/BD7RcRLkk_0">conference talk</a>
 </td></tr>
 
 <tr valign=top><td>2008</td>
@@ -2415,6 +2392,7 @@ Design and Implementation (NSDI)</a></i></b>
 <tr valign=top><td>2017</td>
 <td><b><a href="./2017/NSDI.pdf">A system to verify network behavior of known cryptographic clients</a></b>
 <br>A. Chi, R. A. Cochran, M. Nesfield, M. K. Reiter, and C. Sturton.  Pages 177&#8211;195.
+<br>Additional information: &nbsp; <a href="https://youtu.be/JoBqLyRi9o8">conference talk</a>
 </td></tr>
   
 <tr valign=top><td>2016</td>
