--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -165,7 +165,7 @@ using small trusted hardware to tolerate minority corruption</a></a></b>
 <li><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
 <br>W. Lin, K. Lucas, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 39th International Conference on Machine Learning</i>, July 2022.
-<br>Notes: An <a href="https://github.com/linweiran/CGD">example implementation</a> is available.
+<br>Additional information: &nbsp; <a href="https://github.com/linweiran/CGD">implementation</a>
 </li>
   
 <li><b><a href="./2022/ICLR.pdf">Practical integration via separable bijective networks</a></b>
@@ -212,7 +212,7 @@ BFT using small trusted hardware to tolerate minority corruption</a></b>
 <br>K. Lucas, M. Sharif, L. Bauer, M. K. Reiter, and S. Shintre
 <br>In <i>Proceedings of the 16th ACM Asia Conference on Computer and Communications Security</i>, June 2021.
 <font size="-1"><a href="https://doi.org/10.1145/3433210.3453086">doi:10.1145/3433210.3453086</a></font>
-<br>Notes: An <a href="https://github.com/pwwl/enhanced-binary-diversification">example implementation</a> is available.
+<br>Additional information: &nbsp; <a href="https://github.com/pwwl/enhanced-binary-diversification">implementation</a>
 </li>
 
 <li><b><a href="./2021/CODASPY.pdf">Role-based deception in enterprise networks</a></b>
@@ -263,21 +263,21 @@ and Privacy</i>, April 2021.
 <br>M. Yin, D. Malkhi, M. K. Reiter, G. G. Gueta, and I. Abraham    
 <br>In <i>Proceedings of the 38th ACM Symposium on Principles of Distributed Computing</i>, July 2019.
 <font size="-1"><a href="https://doi.org/10.1145/3293611.3331591">doi:10.1145/3293611.3331591</a></font>
-<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.diem.com/docs/technical-papers/state-machine-replication-paper/">Diem</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available, as is its implementation within the <a href="https://github.com/diem/diem">Diem codebase</a>.
+<br>Additional information: &nbsp; <a href="https://github.com/hot-stuff/libhotstuff">implementation</a> &nbsp; <a href="https://github.com/diem/diem">Diem implementation</a>
 </li>
 
 <li><b><a href="./2019/DSN.pdf">SBFT: A scalable and decentralized trust infrastructure</a></b>
 <br>G. G. Gueta, I. Abraham, S. Grossman, D. Malkhi, B. Pinkas, M. K. Reiter, D.-A. Seredinschi, O. Tamir, and A. Tomescu
 <br>In <i>Proceedings of the 49th IEEE/IFIP International Conference on Dependable Systems and Networks</i>, pages 568&#8211;580, June 2019.
 <font size="-1"><a href="https://dx.doi.org/10.1109/DSN.2019.00063">doi:10.1109/DSN.2019.00063</a> &nbsp; &copy;IEEE</font>
-<br>Notes: This protocol has been adopted as the basis for <a href="https://research.vmware.com/projects/vmware-blockchain">the VMware blockchain</a>.  An <a href="https://github.com/vmware/concord-bft">example implementation</a> is available.
+<br>Additional information: &nbsp; <a href="https://github.com/vmware/concord-bft">implementation</a>
 </li>
 
 <li><b><a href="./2019/TOPS.pdf">A general framework for adversarial examples with objectives</a></b>
 <br>M. Sharif, S. Bhagavatula, L. Bauer, and M. K. Reiter
 <br><i>ACM Transactions on Privacy and Security</i> 22(3), June 2019.
 <font size="-1"><a href="https://doi.org/10.1145/3317611">doi:10.1145/3317611</a></font>
-<br>Notes: An <a href="https://github.com/mahmoods01/agns">example implementation</a> is available.
+<br>Additional information: &nbsp; <a href="https://github.com/mahmoods01/agns">implementation</a>
 </li>
 
 <li><b><a href="./2019/EuroSys.pdf">Efficient and safe network updates with suffix causal consistency</a></b>
@@ -364,6 +364,7 @@ Computer Science 10493), pages 210&#8211;228, September 2017.
 <li><b><a href="./2017/NSDI.pdf">A system to verify network behavior of known cryptographic clients</a></b>
 <br>A. Chi, R. A. Cochran, M. Nesfield, M. K. Reiter, and C. Sturton
 <br>In <i>Proceedings of the 14th USENIX Symposium on Networked Systems Design and Implementation</i>, pages 177&#8211;195, March 2017.
+<br>Additional information: &nbsp; <a href="https://youtu.be/JoBqLyRi9o8">conference talk</a>
 </li>
 
 <li><b><a name="2016"><a href="./2016/CCS1.pdf">A software approach to defeating side channels in last-level caches</a></a></b>
@@ -374,12 +375,13 @@ Computer Science 10493), pages 210&#8211;228, September 2017.
 <li><b><a href="./2016/CCS2.pdf">Accessorize to a crime: Real and stealthy attacks on state-of-the-art face recognition</a></b>
 <br>M. Sharif, S. Bhagavatula, L. Bauer, and M. K. Reiter
 <br>In <i>Proceedings of the 23rd ACM Conference on Computer and Communications Security</i>, pages 1528&#8211;1540, October 2016.  <font size="-1"><a href="http://dx.doi.org/10.1145/2976749.2978392">doi:10.1145/2976749.2978392</a></font>
-<br>Notes: An <a href="https://github.com/mahmoods01/accessorize-to-a-crime">example implementation</a> is available.
+<br>Additional information: &nbsp; <a href="https://github.com/mahmoods01/accessorize-to-a-crime">implementation</a>
 </li>
 
 <li><b><a href="./2016/USENIX.pdf">Stealing machine learning models via prediction APIs</a></b>
 <br>F. Tram&egrave;r, F. Zhang, A. Juels, M. K. Reiter, and T. Ristenpart
 <br>In <i>Proceedings of the 25th USENIX Security Symposium</i>, pages 601&#8211;618, August 2016.
+<br>Additional information: &nbsp; <a href="https://youtu.be/BD7RcRLkk_0">conference talk</a>
 </li>
 
 <li><b><a href="./2016/ICDCS.pdf">Gremlin: Systematic resilience testing of microservices</a></b>
@@ -542,8 +544,7 @@ channels in clouds using StopWatch</a></b>
 on Dependable Systems and Networks</i>, June 2013. 
 <font size="-1"><a href="http://dx.doi.org/10.1109/DSN.2013.6575299">doi:10.1109/DSN.2013.6575299</a> 
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2014/TISSEC">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2014/TISSEC">journal version</a>
 </li>
 
 <li><b><a href="./2013/NDSS.pdf">Toward online verification
@@ -765,8 +766,7 @@ href="http://dx.doi.org/10.1007/978-3-642-15512-3_13">doi:10.1007/978-3-642-1551
 IFIP TC-11 International Information Security Conference, SEC 2010</i>,
 pages 68&#8211;79, September 2010.
 <font size="-1"><a href="http://dx.doi.org/10.1007/978-3-642-15257-3_7">doi:10.1007/978-3-642-15257-3_7</a> &nbsp; &copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2012/CS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2012/CS">journal version</a>
 </li>
 
 <li><b><a href="./2010/ICDCS.pdf">Are your hosts trading or plotting?
@@ -799,8 +799,7 @@ verification of client behavior in online games</a></b>
 <br>D. Bethea, R. A. Cochran and M. K. Reiter
 <br>In <i>Proceedings of the 17th ISOC Network and Distributed
 System Security Symposium</i>, pages 21&#8211;36, February 2010.
-<br>Note: This paper is superceded by <a href="#2011/TISSEC3">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2011/TISSEC3">journal version</a>
 </li>
 
 <li><b><a href="./2010/COMSNETS.pdf">Coordinated sampling
@@ -825,8 +824,7 @@ pages 132&#8211;147, December 2009.
 <br>In <i>Proceedings of the 16th ACM Conference on Computer and
 Communications Security</i>, pages 21&#8211;32, November 2009.
 <font size="-1"><a href="http://doi.acm.org/10.1145/1653662.1653666">doi:10.1145/1653662.1653666</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2011/TISSEC2">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2011/TISSEC2">journal version</a>
 </li>
 
 <li><b><a href="./2009/CCS2.pdf">Privacy-preserving genomic
@@ -997,8 +995,7 @@ misconfigurations in access-control systems</a></b>
 Models and Technologies</i>, pages 185&#8211;194, June 2008.
 <font size="-1"><a href="http://doi.acm.org/10.1145/1377836.1377866">doi:10.1145/1377836.1377866</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2011/TISSEC1">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2011/TISSEC1">journal version</a>
 </li>
 
 <li><b><a href="./2008/DSN.pdf">AGIS: Towards automatic generation of
@@ -1201,8 +1198,7 @@ Communications Security</i>, pages 37&#8211;46, October 2006.  <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/1180405.1180412">doi:10.1145/1180405.1180412</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2008/TISSEC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2008/TISSEC">journal version</a>
 </li>
 
 <li><b><a href="./2006/SRDS.pdf">WRAPS: Denial-of-service defense through web referrals</a></b>
@@ -1221,8 +1217,7 @@ Symposium, RAID 2006</i> (Lecture Notes in Computer Science 4219),
 pages 19&#8211;40, September 2006. <font size="-1"><a
 href="http://dx.doi.org/10.1007/11856214_2">doi:10.1007/11856214_2</a> &nbsp;
 &copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2009/TDSC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2009/TDSC">journal version</a>
 </li>
 
 <li><b><a href="./2006/ESORICS1.pdf">Finding peer-to-peer file-sharing
@@ -1375,8 +1370,7 @@ phones for human-verifiable authentication</a></b>
 Privacy</i>, pages 110&#8211;124, May 2005. <font size="-1"><a
 href="http://dx.doi.org/10.1109/SP.2005.19">doi:10.1109/SP.2005.19</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2009/IJSN">the
-journal version</a>. 
+<br>Additional information: &nbsp; <a href="#2009/IJSN">journal version</a> 
 </li>
 
 <li><b><a href="./2005/SP2.pdf">Distributed proving in access-control
@@ -1425,8 +1419,7 @@ Communications Security</i>, pages 227&#8211;235, October 2004.
 Communications Security</i>, pages 257&#8211;267, October 2004.
 <font size="-1"><a href="http://doi.acm.org/10.1145/1030083.1030118">doi:10.1145/1030083.1030118</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2007/IJIS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2007/IJIS">journal version</a>
 </li>
 
 <li><b><a href="./2004/CCS3.pdf">Gray-box extraction of execution graphs for anomaly detection</a></b>
@@ -1590,8 +1583,7 @@ with puzzle auctions</a></b>
 Privacy</i>, pages 78&#8211;92, May 2003.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/SECPRI.2003.1199329">doi:10.1109/SECPRI.2003.1199329</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2007/IJIS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2007/IJIS">journal version</a>
 </li>
 
 <li>
@@ -1667,8 +1659,7 @@ Communications Security</i>, pages 10&#8211;19, November 2001.  <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/501983.501986">doi:10.1145/501983.501986</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2003/DC2">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2003/DC2">journal version</a>
 </li>
 
 <li>
@@ -1728,8 +1719,7 @@ signatures</a></b>
 <br>In <i>Advances in Cryptology&#8212;CRYPTO 2001</i> (Lecture Notes
 in Computer Science 2139), pages 137&#8211;154, August 2001. 
 <font size="-1">&copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2004/IJIS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2004/IJIS">journal version</a>
 </li>
 
 <li>
@@ -1759,8 +1749,7 @@ devices resilient to capture</a></a></b>
 Privacy</i>, pages 12&#8211;25, May 2001.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/SECPRI.2001.924284">doi:10.1109/SECPRI.2001.924284</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2003/IJIS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2003/IJIS">journal version</a>
 </li>
 
 <li>
@@ -1821,8 +1810,7 @@ processes</a></b>
 Distributed Computing</i> (Lecture Notes in Computer Science 1914),
 pages 345&#8211;359, Springer, October 2000.  
 <font size="-1">&copy;Springer</font>
-<br>Note: This paper is superceded by <a href="#2003/DC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2003/DC">journal version</a>
 </li>
 
 <li>
@@ -1863,8 +1851,7 @@ Communications Security</i>, pages 73&#8211;82, November 1999. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/319709.319720">doi:10.1145/319709.319720</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2002/IJIS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2002/IJIS">journal version</a>
 </li>
 
 <li>
@@ -1876,8 +1863,7 @@ Distributed Systems</i>, pages 134&#8211;143, October 1999.  <font
 size="-1"><a
 href="http://dx.doi.org/10.1109/RELDIS.1999.805090">doi:10.1109/RELDIS.1999.805090</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2003/TCS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2003/TCS">journal version</a>
 </li>
 
 <li>
@@ -1914,8 +1900,7 @@ href="http://dx.doi.org/10.1016/S1389-1286(99)00023-7">doi:10.1016/S1389-1286(99
 Distributed Computing</i>, pages 257&#8211;265, May 1999. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/301308.301368">doi:10.1145/301308.301368</a> &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2001/TPDS2">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#2001/TPDS2">journal version</a>
 </li>
 
 <li>
@@ -1927,8 +1912,7 @@ Computing for Critical Applications</i>, pages 357&#8211;371, January
 1999.  <font size="-1"><a
 href="http://dx.doi.org/10.1109/DCFTS.1999.814307">doi:10.1109/DCFTS.1999.814307</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2001/TPDS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2001/TPDS">journal version</a>
 </li>
 
 <li>
@@ -1969,8 +1953,7 @@ Distributed Systems</i>, pages 271&#8211;279, October 1998.  <font
 size="-1"><a
 href="http://dx.doi.org/10.1109/RELDIS.1998.740509">doi:10.1109/RELDIS.1998.740509</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2000/TKDE">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2000/TKDE">journal version</a>
 </li>
 
 <li>
@@ -2000,8 +1983,7 @@ remote playground</a></b>
 Privacy</i>, pages 40&#8211;51, May 1998.  <font size="-1"> <a
 href="http://dx.doi.org/10.1109/SECPRI.1998.674822">doi:10.1109/SECPRI.1998.674822</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#2000/TSE">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2000/TSE">journal version</a>
 </li>
 
 <li>
@@ -2013,8 +1995,7 @@ Distributed Computing</i>, pages 249&#8211;257, August 1997. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/259380.259450">doi:10.1145/259380.259450</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2000/JoC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2000/JoC">journal version</a>
 </li>
 
 <li>
@@ -2025,8 +2006,7 @@ Distributed Computing</i>, pages 267&#8211;273, August 1997. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/259380.259458">doi:10.1145/259380.259458</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#2001/IC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#2001/IC">journal version</a>
 </li>
 
 <li>
@@ -2046,8 +2026,7 @@ href="http://dx.doi.org/10.1109/CSFW.1997.596799">doi:10.1109/CSFW.1997.596799</
 Computing</i>, pages 569&#8211;578, May 1997.  <font size="-1"><a
 href="http://doi.acm.org/10.1145/258533.258650">doi:10.1145/258533.258650</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#1998/DC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1998/DC">journal version</a>
 </li>
 
 <li>
@@ -2058,8 +2037,7 @@ authentication</a></b>
 Privacy</i>, pages 10&#8211;20, May 1997. <font size="-1"><a
 href="http://dx.doi.org/10.1109/SECPRI.1997.601308">doi:10.1109/SECPRI.1997.601308</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1999/TISSEC">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#1999/TISSEC">journal version</a>
 </li>
 
 <li>
@@ -2080,8 +2058,7 @@ Communications Security</i>, pages 57&#8211;66, April 1997. <font
 size="-1"><a
 href="http://doi.acm.org/10.1145/266420.266435">doi:10.1145/266420.266435</a>
 &nbsp; &copy;ACM</font>
-<br>Note: This paper is superceded by <a href="#1998/ToC">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1998/ToC">journal version</a>
 </li>
 
 <li>
@@ -2108,8 +2085,7 @@ multicast protocol</a></b>
 Workshop</i>, pages 9&#8211;17, June 1996. <font size="-1"> <a
 href="http://dx.doi.org/10.1109/CSFW.1996.503686">doi:10.1109/CSFW.1996.503686</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1997/JoCS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1997/JoCS">journal version</a>
 </li>
 
 <li>
@@ -2138,8 +2114,7 @@ Notes in Computer Science 1070), pages 1&#8211;9, 1996.
 Communications Security</i>, pages 38&#8211;47, March 1996.  <font
 size="-1"><a
 href="http://dx.doi.org/10.1145/238168.238184">doi:10.1145/238168.238184</a></font>
-<br>Note: This paper is superceded by <a href="#1996/JoCS">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1996/JoCS">journal version</a>
 </li>
 
 <li>
@@ -2178,8 +2153,7 @@ auction service</a></b>
 Privacy</i>, pages 2&#8211;14, May 1995.  <font size="-1"> <a
 href="http://dx.doi.org/10.1109/SECPRI.1995.398918">doi:10.1109/SECPRI.1995.398918</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1996/TSE-2">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#1996/TSE-2">journal version</a>
 </li>
 
 <li>
@@ -2228,8 +2202,7 @@ Security and Privacy</i>, pages 176&#8211;189, May 1994.  <font
 size="-1"><a
 href="http://dx.doi.org/10.1109/RISP.1994.296582">doi:10.1109/RISP.1994.296582</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1996/TSE-1">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="#1996/TSE-1">journal version</a>
 </li>
 
 <li>
@@ -2241,8 +2214,7 @@ Security and Privacy</i>, pages 30&#8211;40, May 1993.  <font
 size="-1"> <a
 href="http://dx.doi.org/10.1109/RISP.1993.287645">doi:10.1109/RISP.1993.287645</a>
 &nbsp; &copy;IEEE</font>
-<br>Note: This paper is superceded by <a href="#1995/CJ">the journal
-version</a>.
+<br>Additional information: &nbsp; <a href="#1995/CJ">journal version</a>
 </li>
 
 <li>
