Added a couple of papers

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2293,12 +2293,12 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <table border=0 cellpadding=3>
 
 <tr valign=top><td>2024</td>
-<td><b>Mudjacking: Patching backdoor vulnerabilities in foundation models</b>
+<td><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
 <br>H. Liu, M. K. Reiter, and N. Gong.
 </td></tr>
 
 <tr valign=top><td></td>
-<td><b>The impact of exposed passwords on honeyword efficacy</b>
+<td><b><a href="./2024/USENIX2.pdf">The impact of exposed passwords on honeyword efficacy</a></b>
 <br>Z. Huang, L. Bauer, and M. K. Reiter.
 </td></tr>
   
