--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -87,12 +87,12 @@ be reposted without the explicit permission of the copyright holder.
 <hr>
 
 <ul>
-<li><b><a name="2024">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
+<li><b><a name="2024"><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></a></b>
 <br>H. Liu, M. K. Reiter, and N. Gong
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
 </li>
 
-<li><b>The impact of exposed passwords on honeyword efficacy</b>
+<li><b><a href="./2024/USENIX2.pdf">The impact of exposed passwords on honeyword efficacy</a></b>
 <br>Z. Huang, L. Bauer, and M. K. Reiter
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
 </li>
